<resources>
    <string name="app_name">ToDoList</string>

    <string name="titleTextViewText">Hello World!</string>
    <string name="nameTextViewText">Name</string>
    <string name="btnListText">List</string>
    <string name="btnPhoneText">Phone</string>
    <string name="btnCustomerText">Customer</string>

    <string name="listTitleText">Hello!</string>
    <string name="btnBackText">Back</string>
    <string name="btnResetText">Reset</string>

    <string name="TVTitleEdit">Edit</string>
    <string name="TVTitleAdd">Add</string>
    <string name="ETTextDesc">Enter Title Here</string>
    <string name="btnSubmitText">Submit</string>
    <string name="lastItemWarning">You are not allowed to remove the last item!</string>

    <string name="phoneTitleText">My Contacts</string>

</resources>
